syntax = "proto3";

package fleet;
option go_package = "fleet/pb";

service FleetService {
  rpc RetrieveAgent(AgentByIDReq) returns (AgentRes) {}
  rpc RetrieveAgentGroup(AgentGroupByIDReq) returns (AgentGroupRes) {}
}

message AgentByIDReq {
  string agentID = 1;
  string ownerID = 2;
}

message AgentRes {
  string id = 1;
  string name = 2;
  string channel = 3;
}

message AgentGroupByIDReq {
  string agentGroupID = 1;
  string ownerID = 2;
}

message AgentGroupRes {
  string id = 1;
  string name = 2;
  string channel = 3;
}